[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdmrg-opt"
version = "0.1.0"
description = "PDMRG-OPT: Parallel DMRG with two-site primitives and QR canonization (experimental)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "PDMRG Contributors"}
]
keywords = ["dmrg", "tensor networks", "quantum physics", "mpi", "parallel computing", "gpu", "prototype"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

# Dependencies inherited from workspace root
dependencies = []

[project.optional-dependencies]
# GPU support for future work
gpu = [
    "cupy>=12.0.0",
]

[project.urls]
Homepage = "https://github.com/yye00/dmrg-implementations"
Documentation = "https://github.com/yye00/dmrg-implementations/blob/main/pdmrg-opt/README.md"
Repository = "https://github.com/yye00/dmrg-implementations"
"Bug Tracker" = "https://github.com/yye00/dmrg-implementations/issues"

[project.scripts]
pdmrg-opt = "pdmrg.__main__:main"

[tool.setuptools]
packages = ["pdmrg"]

[tool.setuptools.package-data]
pdmrg = ["py.typed"]
